sg-891 - title overlap fix

--- a/web/themes/custom/sfgovpl/src/sass/components/_details.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_details.scss
@@ -5,11 +5,11 @@ details {
     border: 3px solid $c-bright-blue;
     border-radius: 8px;
     color: $c-bright-blue;
-
+    padding-right: 60px;
+    
     &:hover {
       cursor: pointer;
     }
-
     &:after {
       @include background-image('plus-blue.svg');
       content: '';
@@ -31,7 +31,6 @@ details {
         content: '';
       }
     }
-
     .details__content {
       border: 3px solid $c-bright-blue;
       border-radius: 0 0 8px 8px;
@@ -44,15 +43,21 @@ details {
 .page-node-type-department {
   .sfgov-services details {
     background: $c-white;
+    
+    summary {
+      padding-right: 20px;
+    }
     summary h3,
     summary h5 {
       margin: 0;
       color: $c-bright-blue;
       font-size: 20px;
       font-weight: 500;
+      padding-right: 45px;
+      
       &:hover {
         cursor: pointer;
-      }  
+      }
       &:after {
         @include background-image('plus-blue.svg');
         content: '';
